[build-system]
requires = ["setuptools", "wheel", "numpy >= 1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqentangle"
version = "4.0.4"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Quantum Entanglement in Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["quantum physics", "quantum information", "Schmidt decomposition", "entanglement"]
requires-python = ">=3.7"
classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]
dependencies = ["numpy>=1.20.0", "scipy>=1.4.0", "tensornetwork>=0.4.0"]

[project.urls]
Documentation = "http://pyqentangle.readthedocs.io"
Repository = "https://github.com/stephenhky/pyqentangle"
Issues = "https://github.com/stephenhky/pyqentangle/issues"

[tool.setuptools]
packages = ["pyqentangle", "pyqentangle.quantumstates"]
zip-safe = false

[project.optional-dependencies]
test = ["unittest2", "pytest"]
